OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Component_Library__c/Onboarding_Component_Library__c.object-meta.xml
<CustomObject>
    <description
  >Admin-editable library catalog of Lightning Web Components that can be used in onboarding stages. Maps component API names to metadata for the onboarding flow engine. Example: A library entry might have Name=&quot;Select Vendor&quot; with Component_API_Name__c=&quot;c-vendor-program-onboarding-vendor&quot; and Description__c=&quot;Component for selecting or creating a vendor&quot;. When an Onboarding_Application_Stage__c references this library entry via lookup, the flow engine dynamically instantiates the component. This allows admins to manage available stage components without code changes. Components must be deployed as LWC in the org and registered here before they can be used in processes.</description>
    <label>Onboarding Component Library</label>
    <nameField>
        <label>Onboarding Component Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Component Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>