OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Component_Library__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks the component as available for use in onboarding stages.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>