OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Component_Library__c/fields/Component_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_API_Name__c</fullName>
    <description>E.g., c-vendor-program-onboarding-vendor</description>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>